creusot/tests/should_fail/terminates/loop_through_default_impl.stderr
error: Mutually recursive functions: when calling `<i32 as Foo>::g`...
  --> loop_through_default_impl.rs:26:5
   |
26 |     fn g() {
   |     ^^^^^^
   |
note: then `<i32 as Foo>::g` calls `<T as Foo>::f`...
  --> loop_through_default_impl.rs:27:9
   |
27 |         Self::f();
   |         ^^^^^^^^^
note: then `<T as Foo>::f` calls `h`...
  --> loop_through_default_impl.rs:17:9
   |
17 |         h();
   |         ^^^
note: finally `h` calls `<i32 as Foo>::g`.
  --> loop_through_default_impl.rs:34:5
   |
34 |     <i32 as Foo>::g();
   |     ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

